--- a/style.css
+++ b/style.css
@@ -2,14 +2,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: whitesmoke;
+
+  
+}
+body{
+  background-color: rgb(196,196,255);
 }
 #wrapper{
   justify-content: center;
   align-items: center;
   text-align: center;
   margin-top: 150px;
-
+  
+  
 }
 #quizDiv,
 #scoreDiv {
@@ -18,7 +23,7 @@
   margin: 2rem auto;
   padding: 1rem;
   border-radius: 20px;
-  background-color: palevioletred;
+  background-color: rgb(154,154,255);
   position: relative;
 }
 #scoreDiv {
@@ -34,43 +39,57 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f00;
-  color: #fff;
+  background-color: black;
+  color: wheat;
   font-size: 1.5rem;
 }
 .question {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  
 }
 .options {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+
 }
 .option {
   width: 46%;
   padding: 0.5rem;
-  border: 1px solid #a7eeee;
+  border: 1px solid;
   border-radius: 20px;
-  background-color: azure;
+  background-color: rgb(162, 107, 250);
   text-align: center;
   transition: all 400ms;
   cursor: pointer;
 }
 .option:hover {
   transform: scale(1.1);
-  background-color: #000;
-  color: #fff;
+  background-color: whitesmoke;
 }
 
 button {
   margin: 1rem 0;
   padding: 0.5rem 1rem;
-  border: 2px solid azure;
+  border: 2px solid;
   border-radius: 20px;
-  background-color: azure;
+  background-color: rgb(162, 107, 250);
   text-align: center;
   transition: all 400ms;
   cursor: pointer;
   box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.4);
+}
+
+
+footer{
+  text-align: center;
+  background-color: rgb(162, 107, 250);
+  position: absolute;
+  /* padding-right: 20%; */
+  margin-left: 20%;
+  bottom: 20%;
+  width: 60%;
+  border-radius: 20px;
+
 }
